// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ExpenseListItem with expenses 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/1"
  >
    <h3>
      Gum
    </h3>
  </Link>
  <p>
    $1.95
    -
    January 1st, 1970
  </p>
</div>
`;

exports[`test ExpenseListItem with nothing 1`] = `
<div>
  <Link
    replace={false}
    to="/edit/undefined"
  >
    <h3 />
  </Link>
  <p>
    $0.00
    -
    January 1st, 1970
  </p>
</div>
`;
